# Vesper

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md
.claude/: settings.local.json
docs/: architecture.md  ruvector-api-notes.md  security-audit.md  specification.md
prompts/: system_en.md  system_tr.md
src/: audit.rs  claude_api.rs  coherence.rs  config.rs  embedding.rs  error.rs  forensic.rs  graph_context.rs  language.rs  learning.rs  lib.rs  main.rs  mcp_tools.rs  memory.rs  ner.rs  pipeline.rs  reasoning.rs  types.rs  verification.rs
tests/: test_audit.rs  test_coherence.rs  test_config.rs  test_embedding.rs  test_graph_context.rs  test_language.rs  test_learning.rs  test_mcp_tools.rs  test_memory.rs  test_pipeline.rs  test_types.rs  test_verification.rs
